--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,7 @@
 name: Release
 
 env:
-  PROJECT_NAME: BlazorMarkdown
+  PROJECT_NAME: BlazorMarkdownEnhanced
 
 on:
   release:
@@ -17,10 +17,10 @@ jobs:
       uses: actions/checkout@v2
     - name: Fetch all history for all tags and branches
       run: git fetch --prune --unshallow
-    - name: Setup .NET Core
+    - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.1.102
+        dotnet-version: 5.0.x
     - name: Create the package
       run: dotnet pack --configuration Release
     - name: Upload artifact
