--- a/BlazorMarkdown/BlazorMarkdown.csproj
+++ b/BlazorMarkdown/BlazorMarkdown.csproj
@@ -1,10 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <RazorLangVersion>3.0</RazorLangVersion>
+      <TargetFramework>net7.0</TargetFramework>
 
-    <Authors>George Mathieson</Authors>
+    <Authors>Yannik Hoeflich, George Mathieson</Authors>
     <Company></Company>
     <Copyright>Copyright 2020 (c) George Mathieson. All rights reserved.</Copyright>
 
@@ -13,18 +12,22 @@
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
 
     <!-- NuGet settings -->
-    <PackageId>BlazorMarkdown</PackageId>
+    <PackageId>BlazorMarkdownEnhanced</PackageId>
     <PackageTags>Blazor;Components;Markdown;ASP.NET Core;CSharp;Web</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/georgemathieson/blazor-markdown</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/yannikHoeflich/blazor-markdown</PackageProjectUrl>
     <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/georgemathieson/blazor-markdown</RepositoryUrl>
+    <RepositoryUrl>https://github.com/yannikHoeflich/blazor-markdown</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Markdig" Version="0.20.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.6" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.6" />
+    <PackageReference Include="Markdig" Version="0.32.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="7.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="GitVersionTask" Version="5.5.1" />
   </ItemGroup>
 
 </Project>
