--- a/BlazorMarkdown/BlazorMarkdown.csproj
+++ b/BlazorMarkdown/BlazorMarkdown.csproj
@@ -18,6 +18,7 @@
     <PackageProjectUrl>https://github.com/yannikHoeflich/blazor-markdown</PackageProjectUrl>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/yannikHoeflich/blazor-markdown</RepositoryUrl>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
